1998-08-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.m (compareRGB): New function.
	([Pixmap -createEnd]): Add support for RGB format PNG files;
	uniquify colors and re-paletteize. 

	* global.h, tkobjc.m (initTkObjc): Add PaletteError.

	* internal.m: Use it.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am: Add override to append of CFLAGS with X_CFLAGS.

	* TkExtra.m: Don't include unistd.h.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Graph.m ([Graph -setRangesXMin:Max:YMin:Max:]): Use
	setRanges[XY]Min:Max: for the job.

	* Graph.[hm]: Add setRangesXMin:Max:.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Graph.m: Don't include stdlib.h.

	* Graph.[hm]: Arguments to setScaleModeX:Y: are now boolean, not
	integers.

1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ButtonPanel.m: Don't include collections/String.h.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m ([TkExtra -preInitWithArgc:argv:]): Do namespace
	import for BLT things in the case of BLT 2.4 (as with 8.0-unoff).

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CompleteProbeDisplayLabel.m ([CompleteProbeDisplayLabel
	-createEnd]): Don't set up drag and drop or class browsing if
	there is no probe object.

	* common.m (tkobjc_dragAndDropTarget, dragAndDropTargetArg): Pass
	window name (%%W) to idReceive:.

	* VarProbeEntry.m ([VarProbeEntry -createEnd]): Replace call
	to getProbedType with ([getVarProbe getProbedType])[0].

	* VarProbeEntry.h (VarProbeEntry): Replace probeType with varProbe.

	* VarProbeEntry.[hm] ([VarProbeEntry -setVarProbe:]): Change accessor
	for same.  Add getVarProbe.

1998-07-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.tcl (do_package): Pass window to package:.
	(do_package_arg): Pass window to package:arg:.

	* common.m (oldSetupDragAndDrop, newSetupDragAndDrop): 
	 Pass %%W to do_package.